--- a/XGB-DQN Organized.ipynb
+++ b/XGB-DQN Organized.ipynb
@@ -10,6 +10,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "016b7505",
+   "metadata": {},
+   "source": [
+    "### This work is based on a paper by Xin Liu and Zhonghua Gou\n",
+    "Their publication: Occupant-centric HVAC and window control: A reinforcement learning model for enhancing indoor thermal comfort and energy efficiency. Building and Environment (2024): 111197.\n",
+    "\n",
+    "And their code serves as a basis for this notebook: https://github.com/WHU-LX/Hvac-Window-based-XGB-DQN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02ded292-ec8b-49f2-9ab0-0488ac4fe6c0",
    "metadata": {},
    "source": [
